Fix bug with second scrollbar

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -35,6 +35,10 @@
     text-transform: uppercase;
 }
 
+.d-flex {
+    overflow-y: hidden;
+}
+
 .ml17 .letter {
     display: inline-block;
     line-height: 1em;
