--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -13,7 +13,6 @@ body {
     font-size: 1em;
     font-weight: 300;
     margin: 0;
-    overflow-y: hidden;
 }
 
 h1 {
